[gd_scene load_steps=4 format=3 uid="uid://da3xqrsdb3yq1"]

[ext_resource type="Script" path="res://StartingMenu.gd" id="1_4ikkj"]
[ext_resource type="PackedScene" uid="uid://bt27vnvnn0ckf" path="res://prepasted_data.tscn" id="2_8rh3t"]
[ext_resource type="Script" path="res://LoadingLabel.gd" id="2_qgbcb"]

[node name="StartingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ikkj")
prepastedData = ExtResource("2_8rh3t")

[node name="Label" type="Label" parent="."]
layout_mode = 2
anchor_right = 1.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Choose method for loading a project"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Load" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -31.0
offset_right = 161.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Project From Save"

[node name="New" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -124.0
offset_right = 161.5
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
text = "Create New Project From Code"

[node name="NewLoad" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = 55.0
offset_right = 161.5
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
text = "Create New Project From Code"

[node name="newmenulabel" type="Label" parent="."]
layout_mode = 2
offset_right = 718.0
offset_bottom = 45.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Paste entire \"ExportMain\" class from start.swf"
horizontal_alignment = 1
vertical_alignment = 2

[node name="newmenucode" type="CodeEdit" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 55.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 168.0
grow_vertical = 0
theme_override_font_sizes/font_size = 44
text = "  Loading..."
script = ExtResource("2_qgbcb")

[node name="Timer" type="Timer" parent="LoadingLabel"]
autostart = true

[node name="PrepastedData" parent="." instance=ExtResource("2_8rh3t")]
layout_mode = 1

[connection signal="pressed" from="New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="NewLoad" to="." method="_on_new_load_pressed"]
[connection signal="text_changed" from="newmenucode" to="." method="_on_newmenucode_text_changed"]
[connection signal="timeout" from="LoadingLabel/Timer" to="LoadingLabel" method="_on_timer_timeout"]
[connection signal="data" from="PrepastedData" to="." method="_prepasted_decomp"]
